# hodges

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  compare.sh  decode.c  decodeimage.c  pcmdump.c  runrs.sh
audio/: Makefile
cimpl/: Makefile  pcmdump.c
examples/: bpm.rs  compare.rs  comparison.rs  decode.rs  optimise.rs
examples/util/: audiobuffer.rs  impls.rs  mod.rs  naive_estimator.rs
rs/: Cargo.toml
rs/src/: exploration.rs  main.rs  pcmdump.rs
src/: audiobuffer.rs  lib.rs  libhodges.rs  main.rs  naive_estimator.rs  reference.rs
src/impls/: hodges.rs  mod.rs
src/legacy/: mod.rs
src/sources/: audiobuffer.rs  libhodges.rs  mod.rs
sys/: .gitignore  CMakeLists.txt  Makefile  compare.sh  ideas.h  libpcmdump  libpcmdump.c  libpcmdump.h  pcmdump.c
sys/apps/: pcmdumpbf.c  pcmdumpc.c  pcmdumpf.c
sys/include/: libhodges.h
sys/src/: libhodges.c
sys/stable/: compare.sh
