[package]
name = "hodges"
version = "0.1.0"
authors = ["Adam Harries <harries.adam@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-or-later"
description = "A small library for high speed, high quality pcm audio decoding."
repository = "https://github.com/AdamHarries/hodges"


[dependencies]
byteorder = "1"
libc = "0.2"

[build-dependencies]
bindgen = "0.47.1"
cmake = "0.1.35"
