[package]
name = "rs"
version = "0.1.0"
authors = ["Adam Harries <adam.harries@codeplay.com>"]
edition = "2018"

[dependencies]
ffmpeg = {git = "https://github.com/meh/rust-ffmpeg.git"}

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "exploration"
path = "src/exploration.rs"

[[bin]]
name = "pcmdump"
path = "src/pcmdump.rs"